--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>vue-remuser</title>
+    <script src="//at.alicdn.com/t/font_551872_05lhqivp6c37syvi.js"></script>
   </head>
   <body>
     <div id="app"></div>
